Add service cache (#4)
* Add storages

* fix

* cache default backend

* fix schema

* fix cleanup time

* fix cleanup time

* fix domain model

* remove unuse code

* Add reset to ff backend

* fix service i/f

* fix interface

* fix command
